@@ -56,8 +56,6 @@ module BinData
   #                            selection changes.  Default is false.
   class Choice < BinData::Base
 
-    register_self
-
     mandatory_parameters :choices, :selection
     optional_parameter   :copy_on_change
 
