@@ -47,8 +47,6 @@ module BinData
   #                            not be trimmed when writing.
   class String < BinData::BasePrimitive
 
-    register_self
-
     optional_parameters :read_length, :length, :trim_padding
     default_parameters  :pad_char => "\0"
     mutually_exclusive_parameters :read_length, :length
