@@ -1,8 +1,6 @@
 require 'bindata/base_primitive'
 
 class ExampleSingle < BinData::BasePrimitive
-  register_self
-
   def self.io_with_value(val)
     BinData::IO.new([val].pack("V"))
   end
