@@ -3,6 +3,7 @@
 == Version 1.3.2 (2011-xx-xx)
 
 * Record#snapshot now returns fields in order.
+* Removed the need to call #register_self in subclasses.
 
 == Version 1.3.1 (2011-01-25)
 
